force-app/main/default/objects/Recommendation__c/Recommendation__c.object-meta.xml
<CustomObject>
    <description>Recommended cleanup actions per field with explainable evidence.</description>
    <label>Recommendation</label>
    <nameField>
        <displayFormat>RC-{000000}</displayFormat>
        <label>Recommendation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recommendations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>