force-app/main/default/objects/Recommendation__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <label>Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Keep</fullName>
                <default>true</default>
                <label>Keep</label>
            </value>
            <value>
                <fullName>Remove from Layout</fullName>
            </value>
            <value>
                <fullName>Deprecate</fullName>
            </value>
            <value>
                <fullName>Investigate Dependencies</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>