force-app/main/default/objects/Recommendation__c/fields/ConfidenceScore__c.field-meta.xml
<CustomField>
    <fullName>ConfidenceScore__c</fullName>
    <label>Confidence Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>