force-app/main/default/objects/Recommendation__c/fields/EvidenceSummary__c.field-meta.xml
<CustomField>
    <fullName>EvidenceSummary__c</fullName>
    <label>Evidence Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>