force-app/main/default/objects/Recommendation__c/fields/FieldInventory__c.field-meta.xml
<CustomField>
    <fullName>FieldInventory__c</fullName>
    <label>Field Inventory</label>
    <referenceTo>FieldInventory__c</referenceTo>
    <relationshipName>Recommendations</relationshipName>
    <type>Lookup</type>
</CustomField>