force-app/main/default/objects/Recommendation__c/fields/LastEvaluatedOn__c.field-meta.xml
<CustomField>
    <fullName>LastEvaluatedOn__c</fullName>
    <label>Last Evaluated On</label>
    <type>DateTime</type>
</CustomField>