force-app/main/default/objects/Recommendation__c/fields/RiskScore__c.field-meta.xml
<CustomField>
    <fullName>RiskScore__c</fullName>
    <label>Risk Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>